# jaiswar-securities

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
.github/workflows/: ci.yml
.idx/: dev.nix
apps/ares-trade/: BUILD.bazel  Cargo.toml  README.md
apps/ares-trade/src/: db.rs  engine.rs  main.rs
apps/atlas-risk/: BUILD.bazel  README.md
apps/chronicle-data/: BUILD.bazel  README.md
apps/forge-tools/: BUILD.bazel  README.md
apps/helix-portal/: BUILD.bazel  README.md
apps/hermes-settle/: BUILD.bazel  README.md
apps/olympus-quant/: BUILD.bazel  README.md
apps/sentinel-watch/: BUILD.bazel  README.md
apps/vanguard-infra/: BUILD.bazel  README.md
services/cerberus-auth/: BUILD.bazel
services/cerberus-auth/src/main/java/com/jaiswarsecurities/cerberusauth/: CerberusAuthApplication.java
services/cerberus-auth/src/main/java/com/jaiswarsecurities/cerberusauth/config/: SecurityConfig.java
services/cerberus-auth/src/main/java/com/jaiswarsecurities/cerberusauth/controller/: AuthController.java  TestController.java
services/cerberus-auth/src/main/java/com/jaiswarsecurities/cerberusauth/model/: AccountStatus.java  Role.java  User.java
services/cerberus-auth/src/main/java/com/jaiswarsecurities/cerberusauth/payload/: JwtAuthenticationResponse.java  LoginRequest.java
services/cerberus-auth/src/main/java/com/jaiswarsecurities/cerberusauth/repository/: RoleRepository.java  UserRepository.java
services/cerberus-auth/src/main/java/com/jaiswarsecurities/cerberusauth/security/: JwtAuthenticationFilter.java  JwtTokenProvider.java
services/cerberus-auth/src/main/java/com/jaiswarsecurities/cerberusauth/service/: DatabaseUserDetailsService.java
services/cerberus-auth/src/main/resources/: application.properties
services/cerberus-auth/src/main/resources/db/changelog/: 001-create-user-role-tables.xml  002-add-initial-data.xml  db.changelog-master.xml
services/db-manager/: BUILD.bazel  README.md
services/db-manager/src/main/resources/db/changelog/: db.changelog-master.yaml
services/db-manager/src/main/resources/db/changelog/changes/: 000_create_enum_types.yaml  001_create_clients_table.yaml  002_create_accounts_table.yaml  003_create_instrument_related_enums.yaml  004_create_exchanges_table.yaml  005_create_instruments_table.yaml  006_create_instrument_identifiers_table.yaml  007_create_marketdata_orders_trades_enums.yaml  007_create_order_trade_enums.yaml  007_create_trading_related_enums.yaml  008_create_instrument_prices_table.yaml  008_create_market_data_table.yaml  009_create_orders_table.yaml  010_create_trades_table.yaml  011_create_positions_table.yaml  012_create_user_management_enums.yaml  013_create_users_table.yaml  014_create_roles_table.yaml  015_create_permissions_table.yaml  016_create_role_permissions_table.yaml  017_create_user_roles_table.yaml  018_create_reference_data_enums.yaml  019_create_countries_table.yaml  020_create_currencies_table.yaml  021_create_market_calendars_table.yaml  022_create_trading_holidays_table.yaml  023_create_instrument_detail_enums.yaml  024_create_equity_details_table.yaml  025_create_issuers_table.yaml  026_create_bond_details_table.yaml  027_create_derivative_details_table.yaml  028_alter_instruments_add_issuer_fk.yaml  029_create_clearing_settlement_enums.yaml  030_create_custodians_table.yaml  031_create_allocations_table.yaml  032_create_settlement_instructions_table.yaml  033_create_settlement_legs_table.yaml  034_alter_equity_details_add_audit.yaml  035_create_additional_trading_enums.yaml  036_alter_trades_and_settlement_legs_enums.yaml  (+2 more)
