module(
    name = "jaiswarsecurities",
    version = "0.1.0",
)

# JS/TS/Next.js/React
bazel_dep(name = "rules_nodejs", version = "6.3.5")
bazel_dep(name = "aspect_rules_js", version = "2.3.7")
bazel_dep(name = "aspect_rules_ts", version = "3.5.3")

# Java (Spring Boot, gRPC, etc.)
bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_proto", version = "7.1.0")

# Python
bazel_dep(name = "rules_python", version = "1.4.0-rc4")

# Tooling
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# Grpc with rules_proto
bazel_dep(name = "rules_proto_grpc", version = "5.0.1")

# Utility Rules
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "platforms", version = "0.0.11")

# Testing and license
bazel_dep(name = "rules_testing", version = "0.8.0")
bazel_dep(name = "rules_license", version = "1.0.0")
