module(
    name = "jaiswarsecurities",
    version = "0.1.0",
)

# JS/TS/Next.js/React
bazel_dep(name = "rules_nodejs", version = "6.3.5")
bazel_dep(name = "aspect_rules_js", version = "2.3.7")
bazel_dep(name = "aspect_rules_ts", version = "3.5.3")

# Java (Spring Boot, gRPC, etc.)
bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_proto", version = "7.1.0")

# Python
bazel_dep(name = "rules_python", version = "1.4.0-rc4")

# Tooling
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# Grpc with rules_proto
bazel_dep(name = "rules_proto_grpc", version = "5.0.1")

# Utility Rules
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "platforms", version = "0.0.11")

# Testing and license
bazel_dep(name = "rules_testing", version = "0.8.0")
bazel_dep(name = "rules_license", version = "1.0.0")

# Rust support
bazel_dep(name = "rules_rust", version = "0.61.0")

# C++ support
bazel_dep(name = "rules_cc", version = "0.1.1")

# Go support
bazel_dep(name = "rules_go", version = "0.54.0")

# --- Extensions (must be declared separately) ---

# JVM/Maven dependencies
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.springframework.boot:spring-boot-starter-web:3.1.5",
        "org.springframework.boot:spring-boot-starter-security:3.1.5",
        "io.jsonwebtoken:jjwt-api:0.11.5",
        "io.jsonwebtoken:jjwt-impl:0.11.5",
        "io.jsonwebtoken:jjwt-jackson:0.11.5",
    ],
    repositories = ["https://repo1.maven.org/maven2"],
)
use_repo(maven, "maven")

# Java toolchain setup (remote JDK)
java = use_extension("@rules_java//java:extensions.bzl", "java")
java.toolchain(version = "17")
use_repo(java, "remote_java_tools", "remotejdk_17")
