[package]
name = "ares-trade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-rust_decimal-1", "with-uuid-1"] }
r2d2 = "0.8"
r2d2-postgres = { version = "0.18", features = ["postgres_0_19"] } # Assuming postgres 0.19.x
uuid = { version = "1.0", features = ["v4", "serde"] } # serde for potential future use
rust_decimal = { version = "1.23", features = ["db-postgres", "serde"] } # serde for potential future use
chrono = { version = "0.4", features = ["serde"] } # serde for potential future use
dotenv = "0.15" # For loading .env files (DATABASE_URL)
