load("@rules_go//go:defs.bzl", "go_binary")

go_binary(
    name = "sentinel_watch_service",
    srcs = glob(["src/**/*.go"]),
    importpath = "github.com/jaiswar/sentinel-watch",
    visibility = ["//visibility:public"],
)

load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "sentinel_watch_rust_lib",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/lib.rs",
    edition = "2021",
)
