load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "cerberus_auth_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        artifact("org.springframework.boot:spring-boot-starter-web"),
        artifact("org.springframework.boot:spring-boot-starter-security"),
        artifact("io.jsonwebtoken:jjwt-api"),
        artifact("io.jsonwebtoken:jjwt-impl"),
        artifact("io.jsonwebtoken:jjwt-jackson"),
        # Add other dependencies as needed
    ],
)

java_binary(
    name = "cerberus_auth_server",
    main_class = "com.jaiswarsecurities.cerberusauth.CerberusAuthApplication",
    runtime_deps = [":cerberus_auth_lib"],
    jvm_flags = ["-Dspring.profiles.active=default"], # Example JVM flag
)

# You might need to configure rules_jvm_external in your WORKSPACE or MODULE.bazel file
# to fetch these artifacts from Maven.
# Example (for MODULE.bazel with bzlmod):
#
# maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
# maven.install(
#     artifacts = [
#         "org.springframework.boot:spring-boot-starter-web:3.1.5", # Replace with desired version
#         "org.springframework.boot:spring-boot-starter-security:3.1.5", # Replace with desired version
#         "io.jsonwebtoken:jjwt-api:0.11.5", # Replace with desired version
#         "io.jsonwebtoken:jjwt-impl:0.11.5", # Replace with desired version
#         "io.jsonwebtoken:jjwt-jackson:0.11.5", # Replace with desired version
#     ],
#     repositories = [
#         "https://repo1.maven.org/maven2",
#     ],
# )
# use_repo(maven, "maven")
